edit styles block and custom range to fix visibility mobile

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -73,7 +73,7 @@ body {
 }
 
 .number {
-    @apply w-11 h-11 rounded-full font-semibold text-lg bg-white flex items-center justify-center cursor-pointer border border-black bg-gradient-to-r  hover:from-[#F5D66E] hover:to-[#54C3BD];
+    @apply w-11 h-11 rounded-full font-semibold text-lg bg-white flex items-center flex-none justify-center cursor-pointer border border-black bg-gradient-to-r  hover:from-[#F5D66E] hover:to-[#54C3BD];
 }
 .number.selected {
     @apply bg-gradient-to-r  from-[#F5D66E] to-[#54C3BD];
@@ -81,4 +81,8 @@ body {
 
 .radio-custom {
     @apply radio radio-success pointer-events-none;
+}
+
+.number.word {
+    @apply w-full h-12 px-5 leading-tight;
 }
